update images for approval

--- a/about_me.html
+++ b/about_me.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/ico" href="img/favicon.ico"/>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -32,11 +32,12 @@
             </div>
         </nav>
         <div class="not-nav">
-            <section class="jumbotron" id="biography-banner">
-                <img src="img/gallery5.png" class="biography-background" />
+            <div class="biography-banner">
+                <img src="img/TangPortrait-106.jpg" class="banner biography-background" />
                 <h2 class="bio_title">Biography</h2>
                 <img id="headshot" src="img/bio_headshot.png" />
-            </section>
+                <img class="headshot-small no-transition" src="img/bio_headshot.png" />
+            </div>
             <section>        
                 <div>
                     <div class="bio_container">
@@ -53,7 +54,7 @@
                 </div>
             </section>
             <div class="resume">
-                <a class="resume-pdf" href="media/JFenner_Performance Resume (1).pdf" target="_blank" >Resume</a>
+                <a class="resume-pdf" href="media/resume.pdf" target="_blank" >Resume</a>
             </div>
             <footer class="footer" id="footer-aboutMe">
                 <div class="social">
