--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/ico" href="img/favicon.ico"/>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDd2p4DbzTK0gXgxfvMJm1aD0Fe22tKnsw&callback=initMap&libraries=&v=weekly" defer></script>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -38,7 +37,7 @@
         <div class="not-nav">
             <section>
                 <div class="contact_me">
-                    <img src="img/skyline.jpg" class="contact-background" />
+                    <img src="img/skyline.jpg" class="banner contact-background" />
                     <h2>Contact</h2>
                 </div>
                 
