--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/ico" href="img/favicon.ico"/>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
     <div class="not-nav">
         <section class="jumbotron" id="downloads">
             <div class="my-downloads">
-                <img src="img/gallery11.png" class="downloads-background" />
+                <img src="img/TangPortrait-146.jpg" class="downloads-background" />
                 <h2>Downloads</h2>
             </div>
         </section>   
