--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/ico" href="img/favicon.ico"/>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -41,7 +41,7 @@
                     <h1>Jonathan Tang</h1>
                     <p>Musician | Arranger | Educator</p>
                 </div>
-                <img src="img/homepage_noback.png">
+                <img src="img/TangPortrait-063-removebg-preview.png" class="home-img">
             </div>
 
             <!-- FOOTER -->
@@ -59,3 +59,18 @@
     
 </body>
 </html>
+
+
+<!-- Issues I'm still having with the site:
+
+General:
+    Mobile nav links transition out.
+
+Lessons Page:
+    Transition of quotes. 
+    Quote text color. What would be best?
+
+Media Page:
+    When the window is resized to mobile, I need the value of {initial} to be divided by 2, and vice versa 
+        when it's resized from mobile to desktop. Not sure how to add a listener for that. -->
+    
