--- a/media.html
+++ b/media.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/ico" href="img/favicon.ico"/>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
         <div class="not-nav">
             <section class="jumbotron" id="media">
                 <div class="my-media">
-                    <img src="img/gallery9.png" class="media-background" />
+                    <img src="img/IMG_6426.JPG" class="media-background" />
                     <h2>Media</h2>
                 </div>
             </section>
@@ -85,17 +85,17 @@
                         <span id="slider-image-10"></span>
                         <span id="slider-image-11"></span>
                     <div class="image-container">
-                        <img src="img/gallery1.png" class="slider-image" />
-                        <img src="img/gallery2.png" class="slider-image" id="image-2" />
-                        <img src="img/gallery3.png" class="slider-image" id="image-3" />
-                        <img src="img/gallery4.png" class="slider-image" id="image-4" />
-                        <img src="img/gallery5.png" class="slider-image" />
-                        <img src="img/gallery6.png" class="slider-image" id="image-6" />
-                        <img src="img/gallery7.png" class="slider-image" />
-                        <img src="img/gallery8.png" class="slider-image" id="image-8" />
-                        <img src="img/gallery9.png" class="slider-image" />
-                        <img src="img/gallery10.png" class="slider-image" id="image-10" />
-                        <img src="img/gallery11.png" class="slider-image" />
+                        <img src="img/gallery1.jpg" class="slider-image" />
+                        <img src="img/gallery2.jpg" class="slider-image" id="image-2" />
+                        <img src="img/gallery3.jpg" class="slider-image" id="image-3" />
+                        <img src="img/gallery4.jpg" class="slider-image" id="image-4" />
+                        <img src="img/gallery5.jpg" class="slider-image" />
+                        <img src="img/gallery6.jpg" class="slider-image" id="image-6" />
+                        <img src="img/gallery7.jpg" class="slider-image" />
+                        <img src="img/gallery8.jpg" class="slider-image" id="image-8" />
+                        <img src="img/gallery9.jpg" class="slider-image" />
+                        <img src="img/gallery10.jpg" class="slider-image" id="image-10" />
+                        <img src="img/gallery11.jpg" class="slider-image" />
                     </div>
                     <div class="button-container">
                         <a id="slider-button-1" class="slider-button slider-button-active"></a>
