--- a/lessons.html
+++ b/lessons.html
@@ -9,6 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="img/favicon.png"/>
+    <!-- Calendly badge widget begin -->
+        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+        <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/jacobgfenner?primary_color=3877d4', text: 'Schedule a lesson with me', color: '#3877d4', textColor: '#ffffff' });</script>
+        <style type="text/css">
+            .calendly-badge-widget { z-index: 1; }
+            </style>
+    <!-- Calendly badge widget end -->
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -35,6 +43,7 @@
             <section class="jumbotron" id="academy">
                 <img src="img/banner.png" class="academy-background"/>
                 <h1 class="academy-logo academy-quotes"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
+                <h1 class="academy-logo-small no-transition"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
                 <div class="academy-quotes">
                     <img src="img/quote-icon.png" class="quote-icon" />
                     <p>If you are an aspiring trombone player, message him and ask for a lesson because he gave me some great information!</p>
@@ -56,7 +65,7 @@
                 <div class="academy-quotes">
                     <img src="img/quote-icon.png" class="quote-icon" />
                     <p>You are a very good teacher. You have improved a lot since this summer. I definitely noticed it last week since I hadn't had a lesson with you in a while. You know how to keep things even more concise now. It's cool to see the growth in people!</p>
-                    <h6><span>-CHRIST LARSON</span> <span>COLUMBUS STATE UNIVERSITY '24</span></h6>
+                    <h6><span>-CHRIS LARSON</span> <span>COLUMBUS STATE UNIVERSITY '24</span></h6>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
                 <div class="academy-quotes">
@@ -77,7 +86,6 @@
                     <h6><span>-SHIN TANAKA</span> <span>YST CONSERVATORY OF MUSIC</span></h6>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
-                
             </section>
             <section class="lessons">
                 <h2>Let's work together! If you want to learn, I want to teach!</h2>
@@ -88,7 +96,7 @@
             <section class="poster">
                 <img src="img/Poster.JPG" />
             </section>
-            <section class="form">
+            <!-- <section class="form">
                 <form>
                     <div class="name">
                         <div class="name_input">
@@ -118,13 +126,13 @@
                     <input type="submit" name="send" value="Send" id="send">
                 </div>
                 </form>
-            </section>
-            <footer class="footer">
+            </section> -->
+            <footer class="footer footer-lessons">
                 <div class="social">
                     <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
                     <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
                 </div>
-                <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
+                <p class="copy"><span>Copyright &copy 2020 Jonathan Tang.</span> <span>Website created by Jacob Fenner</span></p>
             </footer>
         </div>
         <div class="tint"></div>
