--- a/lessons.html
+++ b/lessons.html
@@ -14,7 +14,7 @@
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
         <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/jacobgfenner?primary_color=3877d4', text: 'Schedule a lesson with me', color: '#3877d4', textColor: '#ffffff' });</script>
         <style type="text/css">
-            .calendly-badge-widget { z-index: 1; }
+            .calendly-badge-widget { z-index: 1; position: fixed; bottom: 20px;}
             </style>
     <!-- Calendly badge widget end -->
     <title>Jonathan Tang Music</title>
@@ -87,8 +87,8 @@
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
             </section>
-            <section class="lessons">
-                <h2>Let's work together! If you want to learn, I want to teach!</h2>
+            <section class="lessons paragraph">
+                <h2 class="subtitle">Let's work together! If you want to learn, I want to teach!</h2>
                 <p>Like many of my colleagues, lately I’ve been feeling a little unfulfilled spiritually due to the lack of camaraderie with friends/colleagues/students and I’ve been feeling that I wanted to get back into teaching. When I was still in my undergrad I was teaching on a weekly basis which not only helped my students, but also helped me develop and hone my craft as a teacher. This is something I haven’t been able to do yet at CCM and I miss it very much! I’ve helped guide students in the direction they want and I’m very pleased with how far they’ve gone. Several have made Allstate and even continued to pursue music in college.</p>
                 <p>Today, I would like to invite any brass players to join my online studio. To follow social guidelines, any and all lessons will be online for the foreseeable future. I’ve reduced my rates to compensate for this. Don’t wait until August to start preparing for Allstate, National Youth Orchestra, or College auditions. Start preparing and planning now! If you want to learn I want to teach! If you are a music educator and you’ve got trombone players that need help, please send them my way!</p>
                 <p>For rates and options please see the poster below. I look forward to working with some of you soon!</p>
