--- a/media.html
+++ b/media.html
@@ -115,8 +115,8 @@
                         <img src="img/arrow.png" id="right" />
                     </div>
                 </div>
-                <section class="credit">
-                    <h4>Professional Photos Courtesy of Maria Smart Photography</h4>
+                <section class="credit sub-title">
+                    <h4>Professional Photos Courtesy of Sean Reynolds Photography</h4>
                 </section>
             </div>
             <footer class="footer">
