--- a/downloads.html
+++ b/downloads.html
@@ -45,7 +45,7 @@
                 <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
                 <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
             </div>
-            <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
+            <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Fenner Studios</p>
         </footer>
     </div>
     <div class="tint"></div>
