--- a/lessons.html
+++ b/lessons.html
@@ -14,7 +14,7 @@
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
         <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/jacobgfenner?primary_color=3877d4', text: 'Schedule a lesson with me', color: '#3877d4', textColor: '#ffffff' });</script>
         <style type="text/css">
-            .calendly-badge-widget { z-index: 1; position: fixed; bottom: 20px;}
+            .calendly-badge-widget { z-index: 1; position: fixed; bottom: 20px; overflow: hidden;}
             </style>
     <!-- Calendly badge widget end -->
     <title>Jonathan Tang Music</title>
@@ -132,7 +132,7 @@
                     <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
                     <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
                 </div>
-                <p class="copy"><span>Copyright &copy 2020 Jonathan Tang.</span> <span>Website created by Jacob Fenner</span></p>
+                <p class="copy"><span>Copyright &copy 2020 Jonathan Tang.</span> <span>Website created by Fenner Studios</span></p>
             </footer>
         </div>
         <div class="tint"></div>
