customized curator.io feed

--- a/about_me.html
+++ b/about_me.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="all">
-        <nav id="myNav">
+        <nav class="myNav">
             <div class="brand">
                 <a href="home.html">Jonathan Tang Music</a>
             </div>
