--- a/home.html
+++ b/home.html
@@ -11,15 +11,15 @@
     <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
-<body>
-    <div class="all">
+<body class="body-home">
+    <div class="all" >
 
         <!-- HEADER -->
-        <nav id="myNav">
+        <nav class="myNav" id="home-nav">
             <div class="brand">
                 <a href="home.html">Jonathan Tang Music</a>
             </div>
-            <ul class="nav-links">
+            <ul class="nav-links" id="nav-links-home">
                 <li><a href="about_me.html">About Me</a></li>
                 <li><a href="lessons.html">Lessons</a></li>
                 <li><a href="media.html">Media</a></li>
@@ -41,7 +41,7 @@
                     <h1>Jonathan Tang</h1>
                     <p>Musician | Arranger | Educator</p>
                 </div>
-                <img src="img/TangPortrait-063-removebg-preview.png" class="home-img">
+                <!-- <img src="img/TangPortrait-096-removebg-preview.png" class="home-img"> -->
             </div>
 
             <!-- FOOTER -->
