--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     
     <div class="all">
-        <nav id="myNav">
+        <nav class="myNav">
             <div class="brand">
                 <a href="home.html">Jonathan Tang Music</a>
             </div>
