--- a/lessons.html
+++ b/lessons.html
@@ -10,18 +10,26 @@
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="img/favicon.png"/>
     <!-- Calendly badge widget begin -->
+        <!-- <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+        <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/jonthantangmusic', text: 'Schedule a lesson with me', color: '#3877d4', textColor: '#ffffff', branding: true }); }</script>
+        <style type="text/css">
+            .calendly-badge-widget { z-index: 1; position: fixed; bottom: 20px; }
+        </style> -->
+<!-- Calendly badge widget end -->
+    <!-- Calendly badge widget begin -->
         <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
-        <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/jacobgfenner?primary_color=3877d4', text: 'Schedule a lesson with me', color: '#3877d4', textColor: '#ffffff' });</script>
+        <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/jonthantangmusic', text: 'Schedule a lesson with me', color: '#3877d4', textColor: '#ffffff' });</script>
         <style type="text/css">
-            .calendly-badge-widget { z-index: 1; position: fixed; bottom: 20px; overflow: hidden;}
+            .calendly-badge-widget { z-index: 1; position: fixed; bottom: 20px; }
             </style>
     <!-- Calendly badge widget end -->
     <title>Jonathan Tang Music</title>
 </head>
 <body>
     <div class="all">
-        <nav id="myNav">
+        <nav class="myNav">
             <div class="brand">
                 <a href="home.html">Jonathan Tang Music</a>
             </div>
