--- a/about_me.html
+++ b/about_me.html
@@ -61,7 +61,7 @@
                     <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
                     <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
                 </div>
-                <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Fenner Studios</p>
+                <p class="copy">Jonathan Tang &copy 2020 . Website created by <a class="fenner" href="https://fennerstudios.com">Fenner Studios</a></p>
             </footer>
         </div>
         <div class="tint"></div>
