--- a/lessons.html
+++ b/lessons.html
@@ -140,7 +140,7 @@
                     <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
                     <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
                 </div>
-                <p class="copy"><span>Copyright &copy 2020 Jonathan Tang.</span> <span>Website created by Fenner Studios</span></p>
+                <p class="copy">Jonathan Tang &copy 2020 . Website created by <a class="fenner" href="https://fennerstudios.com">Fenner Studios</a></p>
             </footer>
         </div>
         <div class="tint"></div>
