fixed querySelector issues

--- a/downloads.html
+++ b/downloads.html
@@ -12,7 +12,7 @@
     <title>Jonathan Tang Music</title>
 </head>
 <body>
-    <nav id="myNav">
+    <nav class="myNav">
         <div class="brand">
             <a href="home.html">Jonathan Tang Music</a>
         </div>
