fully responsive media page

--- a/media.html
+++ b/media.html
@@ -42,46 +42,42 @@
             <div class="content">
                 <section class="recording-grid-container">
                     <div class="video-card">
-                        <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" allowfullscreen></iframe>
-                        <h3>Artist</h3>
-                        <h5>Title</h5>
-                        <h5>Composer/Arranger</h5>
+                        <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" width="500px" height="300px" allowfullscreen></iframe>
+                        <h3>Composer - Title</h3>
+                        <h5>Artist</h5>
                         <p>Event/description</p>
                     </div>
                     <div class="video-card">
-                        <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" allowfullscreen></iframe>
-                        <h3>Artist</h3>
-                        <h5>Title</h5>
-                        <h5>Composer/Arranger</h5>
+                        <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" width="500px" height="300px" allowfullscreen></iframe>
+                        <h3>Composer - Title</h3>
+                        <h5>Artist</h5>
                         <p>Event/description</p>
                     </div>
                     <div class="audio-card">
                         <audio src="media/example.mp3" type="audio/mp3" controls >This browser does not support mp3 files.</audio>
-                        <h3>Artist</h3>
-                        <h5>Title</h5>
-                        <h5>Composer/Arranger</h5>
-                        <p>Event/description/Time Stamps?</p>
+                        <h3>Composer - Title</h3>
+                        <h5>Artist</h5>
+                        <p>Event/description</p>
                     </div>
                     <div class="audio-card">
                         <audio src="media/example.mp3" type="audio/mp3" controls >This browser does not support mp3 files.</audio>
-                        <h3>Artist</h3>
-                        <h5>Title</h5>
-                        <h5>Composer/Arranger</h5>
-                        <p>Event/description/Time Stamps?</p>
+                        <h3>Composer - Title</h3>
+                        <h5>Artist</h5>
+                        <p>Event/description</p>
                     </div>
                 </section>
                 
-<!-- Place <div> tag where you want the feed to appear -->
-    <div id="curator-feed-grid-carousel"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
-    <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
-    <script type="text/javascript">
-    /* curator-feed-grid-carousel */
-    (function(){
-    var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
-    i.src = "https://cdn.curator.io/published/9b2fdac3-1fed-4305-94d4-52715ef31f91_ewm3d99g.js";
-    e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
-    })();
-    </script>
+                <!-- Place <div> tag where you want the feed to appear -->
+                    <div id="curator-feed-grid-carousel"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+                    <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+                    <script type="text/javascript">
+                    /* curator-feed-grid-carousel */
+                    (function(){
+                    var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+                    i.src = "https://cdn.curator.io/published/9b2fdac3-1fed-4305-94d4-52715ef31f91_ewm3d99g.js";
+                    e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+                    })();
+                    </script>
     
                 <!-- IMAGE CAROUSEL -->
                 <div class="slide-container">
