changed mobile navigation menu to full screen

--- a/home.html
+++ b/home.html
@@ -49,10 +49,10 @@
                     <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
                     <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
                 </div>
-                <p class="copy">Jonathan Tang &copy 2020 . Website created by <a class="fenner" href="https://fennerstudios.com">Fenner Studios</a></p>
+                <p class="copy">Jonathan Tang &copy 2020. Website created by <a class="fenner" href="https://fennerstudios.com">Fenner Studios</a></p>
             </footer>
         </div>
-        <div class="tint"></div>
+        <!-- <div class="tint"></div> -->
         <script src="app.js"></script>
     </div> <!--End div class="all"-->
     
