made loading screen responsive

--- a/home.html
+++ b/home.html
@@ -58,17 +58,15 @@
             <div class="load-container">
                 <!-- <span class="loading-message">Finishing up my practice</span> -->
                 <div class="trombone-container">
-                    <img id="loader-body" src="img/tromboneBody.png" width="300px" alt="logo">
-                    <img id="loader-slide" src="img/tromboneSlide.png" width="300px" alt="logo">
-                    <img id="music-note-1" src="img/musicNote.png" width="50px" alt="logo">
-                    <img id="music-note-2" src="img/musicNote.png" width="50px" alt="logo">
-                    <img id="music-note-3" src="img/musicNote.png" width="50px" alt="logo">
-                    <!-- <img id="loader-body" src="img/tromboneBody.svg" width="300px" alt="logo">
-                    <img id="loader-slide" src="img/tromboneSlide.svg" width="300px" alt="logo">
-                    <img id="music-note-1" src="img/musicNote.svg" width="50px" alt="logo">
-                    <img id="music-note-2" src="img/musicNote.svg" width="50px" alt="logo">
-                    <img id="music-note-3" src="img/musicNote.svg" width="50px" alt="logo"> -->
+                    <img id="loader-body" src="img/tromboneBody.svg" width="250px" alt="logo">
+                    <img id="loader-slide" src="img/tromboneSlide.svg" width="250px" alt="logo">
+                    <img id="music-note-1" src="img/musicNote.svg" width="40px" alt="logo">
+                    <img id="music-note-2" src="img/musicNote.svg" width="40px" alt="logo">
+                    <img id="music-note-3" src="img/musicNote.svg" width="40px" alt="logo">
                 </div>
+                <div class="brand" id="loading-brand">
+                    <a href="#">Jonathan Tang Music</a>
+                </div>    
             </div>    
         </div>
 
