--- a/downloads.html
+++ b/downloads.html
@@ -48,7 +48,20 @@
             <p class="copy">Jonathan Tang &copy 2020 . Website created by <a class="fenner" href="https://fennerstudios.com">Fenner Studios</a></p>
         </footer>
     </div>
-    <div class="tint"></div>
+
+    <div class="loader">
+        <div class="load-container">
+            <!-- <span class="loading-message">Finishing up my practice</span> -->
+            <div class="trombone-container">
+                <img id="loader-body" src="img/tromboneBody.svg" width="300px" alt="logo">
+                <img id="loader-slide" src="img/tromboneSlide.svg" width="300px" alt="logo">
+                <img id="music-note-1" src="img/musicNote.svg" width="50px" alt="logo">
+                <img id="music-note-2" src="img/musicNote.svg" width="50px" alt="logo">
+                <img id="music-note-3" src="img/musicNote.svg" width="50px" alt="logo">
+            </div>
+        </div>    
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
