redirect to home page on form submit

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,22 @@
 </head>
 <body>
     
+    <div class="loader">
+        <div class="load-container">
+            <!-- <span class="loading-message">Finishing up my practice</span> -->
+            <div class="trombone-container">
+                <img id="loader-body" src="img/tromboneBody.svg" width="250px" alt="logo">
+                <img id="loader-slide" src="img/tromboneSlide.svg" width="250px" alt="logo">
+                <img id="music-note-1" src="img/musicNote.svg" width="40px" alt="logo">
+                <img id="music-note-2" src="img/musicNote.svg" width="40px" alt="logo">
+                <img id="music-note-3" src="img/musicNote.svg" width="40px" alt="logo">
+            </div>
+            <div class="brand" id="loading-brand">
+                <a href="#">Jonathan Tang Music</a>
+            </div>    
+        </div>    
+    </div>
+
     <div class="all">
         <nav class="myNav">
             <div class="brand">
@@ -43,7 +59,7 @@
                 
                 <div class="form" id="contact-form">
                     <p>If you would like to book me for a masterclass or recording session, have any questions about music, the marching arts, fitness, or arrangements, or just feel like saying hi, please feel free to leave your name and email and I’ll get back to you!</p>
-                    <form action="POST" data-netlify="true" autocomplete="off">
+                    <form method="POST" action="home.html" data-netlify="true" autocomplete="off">
                         <div class="name">
 
                             <div class="name_input">
@@ -90,22 +106,6 @@
                 </div>
                 <p class="copy">Jonathan Tang &copy 2020 . Website created by <a class="fenner" href="https://fennerstudios.com">Fenner Studios</a></p>
             </footer>
-        </div>
-
-        <div class="loader">
-            <div class="load-container">
-                <!-- <span class="loading-message">Finishing up my practice</span> -->
-                <div class="trombone-container">
-                    <img id="loader-body" src="img/tromboneBody.svg" width="250px" alt="logo">
-                    <img id="loader-slide" src="img/tromboneSlide.svg" width="250px" alt="logo">
-                    <img id="music-note-1" src="img/musicNote.svg" width="40px" alt="logo">
-                    <img id="music-note-2" src="img/musicNote.svg" width="40px" alt="logo">
-                    <img id="music-note-3" src="img/musicNote.svg" width="40px" alt="logo">
-                </div>
-                <div class="brand" id="loading-brand">
-                    <a href="#">Jonathan Tang Music</a>
-                </div>    
-            </div>    
         </div>
 
         <script src="app.js"></script>
