redirect to message confirmation page

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 
                 <div class="form" id="contact-form">
                     <p>If you would like to book me for a masterclass or recording session, have any questions about music, the marching arts, fitness, or arrangements, or just feel like saying hi, please feel free to leave your name and email and I’ll get back to you!</p>
-                    <form method="POST" action="home.html" data-netlify="true" autocomplete="off">
+                    <form method="POST" action="messageSent.html" data-netlify="true" autocomplete="off">
                         <div class="name">
 
                             <div class="name_input">
