--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 
                 <div class="form" id="contact-form">
                     <p>If you would like to book me for a masterclass or recording session, have any questions about music, the marching arts, fitness, or arrangements, or just feel like saying hi, please feel free to leave your name and email and I’ll get back to you!</p>
-                    <form method="POST" action="messageSent.html" data-netlify="true" autocomplete="off">
+                    <form method="POST" action="messageSent.html" data-netlify="true" netlify-honeypot="bot-trap" autocomplete="off">
                         <div class="name input-container">
                             <label>Name:</label>
                             <input type="text" name="name" id="name" required>
@@ -80,9 +80,7 @@
                             <textarea rows="5" cols="78" name="message" id="message" required></textarea>
                             <span class="underline"></span>
                         </div>
-                        <div class="input-container">
-                            <div data-netlify-recaptcha="true"></div>
-                        </div>
+                        <input type="hidden" name="bot-trap"> 
                         <button class="send-button">Send</button>
                     </form>
                 </div>
