adjusted slider settings

--- a/media.html
+++ b/media.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <!-- <div class="loader">
+    <div class="loader">
         <div class="load-container">
             <div class="trombone-container">
                 <img id="loader-body" src="img/tromboneBody.svg" width="250px" alt="logo">
@@ -28,7 +28,7 @@
                 <a href="#">Jonathan Tang Music</a>
             </div>    
         </div>    
-    </div> -->
+    </div>
 
     <div class="all">
         <nav class="myNav">
