switched glider functionality to media.js file

--- a/media.html
+++ b/media.html
@@ -144,5 +144,6 @@
     <!-- Glider.js slider  -->
     <script src="glider.min.js"></script>
     <script src="app.js"></script>
+    <script src="media.js"></script>
 </body>
 </html>
