shopping cart skeleton successfully set up with psuedo products and no payment method yet

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,10 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-        </nav>
+            <a class="cart-icon" href="downloads.html#cart">
+                <i class="fas fa-shopping-cart"></i>
+            </a>
+            </nav>
             
         </section>
         <div class="not-nav">
