--- a/media.html
+++ b/media.html
@@ -47,8 +47,10 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-            <!-- <i class="fas fa-shopping-cart"></i> -->
-        </nav>
+            <a class="cart-icon" href="downloads.html#cart">
+                <i class="fas fa-shopping-cart"></i>
+            </a>
+            </nav>
         <div class="not-nav">
             <section class="jumbotron" id="media">
                 <div class="my-media">
