--- a/about_me.html
+++ b/about_me.html
@@ -47,7 +47,10 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-        </nav>
+            <a class="cart-icon" href="downloads.html#cart">
+                <i class="fas fa-shopping-cart"></i>
+            </a>
+            </nav>
         <div class="not-nav">
             <div class="biography-banner">
                 <img src="img/TangPortrait-106.jpg" class="banner biography-background" />
