--- a/home.html
+++ b/home.html
@@ -49,7 +49,10 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-        </nav>
+            <a class="cart-icon" href="downloads.html#cart">
+                <i class="fas fa-shopping-cart"></i>
+            </a>
+            </nav>
 
         <!-- MAIN CONTENT-->
         <div class="not-nav">
