--- a/lessons.html
+++ b/lessons.html
@@ -63,7 +63,10 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-        </nav>
+            <a class="cart-icon" href="downloads.html#cart">
+                <i class="fas fa-shopping-cart"></i>
+            </a>
+            </nav>
         <div class="not-nav">
             <section class="jumbotron" id="academy">
                 <img src="img/banner.png" class="academy-background"/>
